--- a/css/carousel.css
+++ b/css/carousel.css
@@ -5,14 +5,6 @@
     position: relative;
 }
 
-/* .carousel-info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-bottom: 50px;
-} */
-
 .overlay-image {
     position: absolute;
     top: 0;
@@ -22,4 +14,75 @@
     background-position: center;
     background-size: cover;
     opacity: 0.75;
+}
+
+.cotain-mb {
+    margin-bottom: 120px;
+}
+
+
+
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .aside-margin {
+        margin-top: 80px;
+        margin-left: 50px;
+        margin-right: 80px;
+    }
+
+    .aside-info-container h1 {
+        font-size: 3rem;
+    }
+
+    .aside-info-container p {
+        font-size: 3rem;
+        padding-right: 20px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+    .aside-info-container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .aside-img-container {
+        margin-top: 30px;
+    }
+
+    .aside-info-container h1 {
+        font-size: 2.2rem;
+    }
+
+    .aside-info-container p {
+        font-size: 1.3rem;
+    }
+}
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .aside-info-container {
+        margin-top: 30px;
+    }
+
+    .aside-info-container h1 {
+        font-size: 2.5rem;
+        padding: 10px;
+    }
+
+    .aside-info-container p {
+        font-size: 1.2rem;
+        padding: 10px;
+    }
+
+    .aside-img-container {
+        padding: 10px;
+
+    }
 }
